# fuzzyd

./: Cargo.toml  README.md  config.toml.example
src/: config.rs  error.rs  lib.rs
src/fuzzy/: finder.rs  history.rs  mod.rs  scorer.rs
src/launcher/: mod.rs  systemd.rs
src/sources/: mod.rs  path.rs  xdg_desktop.rs
src/ui/: mod.rs  terminal.rs
